<resources>
    <string name="app_name">USTH Weather</string>
    <string name="mon">Lundi</string>
    <string name="tue">Mandi</string>
    <string name="wed">Mercredi</string>
    <string name="thu">Jeudi</string>
    <string name="fri">Vendredi</string>
    <string name="sat">Samedi</string>
    <string name="sun">Dimanche</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>